# nomad_client

./: .gitignore  Cargo.toml  README.md
examples/: events.rs  jobs.rs  nodes.rs
src/: allocations.rs  chunked_response.rs  constraint.rs  csi.rs  deployments.rs  evaluations.rs  event_stream.rs  jobs.rs  lib.rs  nodes.rs  resources.rs  scaling.rs  serde_helpers.rs  services.rs  tasks.rs
src/model/: allocations.rs  constraint.rs  deployments.rs  evaluations.rs  event_stream.rs  jobs.rs  nodes.rs  resources.rs  services.rs  tasks.rs
