[package]
name = "nomad-client"
version = "0.1.0"
authors = ["Greg Wuller <greg@afofo.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }

serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.60"
serde_with = "1.6.2"

tokio = { version = "1.2.0", features = ["full"] }
reqwest = { version = "0.11.0", features = ["json"] }

[[example]]
name = "jobs"

[[example]]
name = "nodes"
